--- a/appkettle/Dockerfile
+++ b/appkettle/Dockerfile
@@ -10,8 +10,14 @@ RUN \
 RUN \
   apk add -U g++ gcc
 
-RUN pip install paho.mqtt \
-  pycryptodomex
+#RUN pip install paho.mqtt \
+#  pycryptodomex
+
+apk add --no-cache
+python3
+py3-pip
+py3-paho-mqtt
+py3-pycryptodomex
 
 # Python 3 HTTP Server serves the current working dir
 # So let's set it to our add-on persistent data directory.
