--- a/appkettle/Dockerfile
+++ b/appkettle/Dockerfile
@@ -14,11 +14,11 @@ RUN \
 #  pycryptodomex
 
 RUN \
-apk add --no-cache
-python3
-py3-pip
-py3-paho-mqtt
-py3-pycryptodomex
+  apk add --no-cache
+    python3 \
+    py3-pip \
+    py3-paho-mqtt \
+    py3-pycryptodomex
 
 # Python 3 HTTP Server serves the current working dir
 # So let's set it to our add-on persistent data directory.
